# olympus-cli

./: README.md  pyproject.toml
src/olympus_cli/: __init__.py  main.py
tests/: test_main.py
